# jymbo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: functions.cmake
derivative_tree/: CMakeLists.txt
derivative_tree/include/: derivative_tree.hpp
derivative_tree/src/: derivative_tree.cpp
graph/: CMakeLists.txt
graph/include/: nary_tree.hpp
jymbo/: CMakeLists.txt
jymbo/include/: derivative_node.hpp  derivative_tree.hpp  jymbo_types.hpp  operators.hpp  query_node.hpp  query_tree.hpp  symbols.hpp
jymbo/src/: derivative_node.cpp  operators.cpp  query_node.cpp  query_tree.cpp
operators/: CMakeLists.txt
operators/include/: operator_types.hpp  operators.hpp
operators/src/: operators.cpp
query_tree/: CMakeLists.txt
query_tree/include/: query_tree.hpp
symbols/: CMakeLists.txt
symbols/include/: symbol_types.hpp  symbols.hpp
symbols/src/: symbols.cpp
tests/: CMakeLists.txt
tests/derivative_tree/: CMakeLists.txt
tests/derivative_tree/derivative_tree_tests/: CMakeLists.txt  derivative_tree_tests.cpp
tests/operators/: CMakeLists.txt
tests/operators/operator_tests/: CMakeLists.txt  operator_tests.cpp
tests/query_tree/: CMakeLists.txt
tests/query_tree/query_tree_tests/: CMakeLists.txt  query_tree_tests.cpp
tests/symbols/: CMakeLists.txt
tests/symbols/symbol_tests/: CMakeLists.txt  symbol_tests.cpp
tests/test_utils/: CMakeLists.txt  polynomial_query_tree.cpp  polynomial_query_tree.hpp
types/: CMakeLists.txt  jymbo_types.hpp
